# el-ahorcado

./: CHANGELOG.md  el-ahorcado.cabal
app/: Main.hs  temp.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
