cabal-version:      2.4
name:               el-ahorcado
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             S35H47
maintainer:         45127101+S35H47@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable el-ahorcado
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.14.3.0,
        ansi-terminal ^>=0.11.3,
        transformers ^>=0.5.6.2
    hs-source-dirs:   app
    default-language: Haskell2010
